# awsagentcore

./: .bedrock_agentcore.yaml  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements-docker.txt  requirements-webrtc.txt  requirements.txt
api/: __init__.py
api/webrtc/: Dockerfile  __init__.py  app.py  auth.py  config.py  connect_client.py  lambda_handler.py  models.py
aria/: __init__.py  agent.py  agentcore_app.py  agentcore_voice.py  audit_manager.py  memory_client.py  system_prompt.py  transcript_manager.py  voice_agent.py
aria/models/: __init__.py  account.py  analytics.py  auth.py  cards.py  customer.py  escalation.py  pii.py  (+3 more)
client/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: agentcore-deployment-guide.md  agentcore-tools-architecture.md  amazon-connect-agentic-mcp-setup-guide.md  amazon-connect-lex-nova-sonic-setup-guide.md  amazon-connect-path-e-bedrock-agent-lex-guide.md  aria-amazon-connect-architecture.md  aria-connect-ai-agent-builder.md  aria-connect-channel-transfer-guide.md  aria-connect-conversational-ai-setup-guide.md  aria-connect-flow-module-tools-guide.md  aria-connect-security-profiles-guide.md  aria-connect-voice-chat-novice-guide.md  aria-strands-to-bedrock-agent-migration.md  aria-system-prompt-v2.md  audit-event-architecture.md  domain-sub-agent-architecture.md  linkedin-post.md  transcript-storage.md  vulnerability-protocol.md
scripts/: .deploy-state.json  deploy.sh  deploy_mcp_gateway.sh  deploy_webrtc_api.sh  test_invoke.py
(+80 files in other folders)
